[package]
name = "cellar-migration"
version = "2.0.0-rc.0"
edition = "2021"
authors = [ "Arnaud Lefebvre <arnaud.lefebvre@clever-cloud.com>" ]

[[bin]]
name = "cellar-migration"
path = "src/main.rs"

[[bin]]
name = "http-server"
path = "src/http-server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.15", features = ["client", "stream", "server"] }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
base64 = "0.21.0"
urlencoding = "2.1.0"
ring = "0.16.20"
chrono = "0.4.19"
serde-xml-rs = "0.6"
serde = "1.0.130"
serde_derive = "1.0.130"
anyhow = "1.0.51"
futures = "0.3"
bytes = "1.1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
env_logger = "^0.10"
clap = { version = "4.1", features = ["cargo", "suggestions"] }
num_cpus = "1.13"
bytesize = "1.1"
dyn-clone = "1.0.10"
