[package]
name = "cellar-migration"
version = "2.1.0"
edition = "2021"
authors = [ "Arnaud Lefebvre <arnaud.lefebvre@clever-cloud.com>" ]

[[bin]]
name = "cellar-migration"
path = "src/main.rs"

[[bin]]
name = "http-server"
path = "src/http-server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.11.0"
aws-smithy-runtime-api = "1.1.1"
aws-smithy-types = { version = "1.1.1", features = ["http-body-0-4-x", "byte-stream-poll-next"] }
aws-smithy-types-convert = { version = "0.60.1", features = ["convert-chrono"] }
aws-credential-types = { version = "1.1.1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
http-body = "0.4"
hyper = { version = "0.14.15", features = ["client", "stream", "server"] }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
base64 = "0.21.0"
urlencoding = "2.1.0"
ring = "0.17"
chrono = "0.4.19"
serde-xml-rs = "0.6"
serde = "1.0.130"
serde_derive = "1.0.130"
anyhow = "1.0.51"
futures = "0.3"
bytes = "1.1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
env_logger = "^0.10"
clap = { version = "4.1", features = ["cargo", "suggestions"] }
num_cpus = "1.13"
bytesize = "1.1"
dyn-clone = "1.0.10"
libc = "0.2"
url = "2.5"