[package]
name = "test-common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types = { workspace = true }
aws-smithy-types-convert = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }
tokio = { workspace = true }
