[package]
name = "test-common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.11.0"
aws-smithy-types = { version = "1.1.1", features = ["http-body-0-4-x", "byte-stream-poll-next"] }
aws-smithy-types-convert = { version = "0.60.1", features = ["convert-chrono"] }
chrono = "0.4.19"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
